# AI-Research_assistant

./: .env.example  .gitignore  README.md  app.py  flask_app.py  main.py  pyproject.toml  rag_test_lab.py  requirements.txt  research_assistant.py
.rag_lab_chroma/: chroma.sqlite3
static/css/: style.css
static/js/: app.js
templates/: index.html
