[project]
name = "ai-research-assistant-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen>=0.11.2",
    "flask>=3.1.3",
    "groq>=1.0.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
